# skoders

./: .gitignore  package-lock.json  pyproject.toml
src/main/python/: app.py
src/main/python/api/: analyze_market_data.py  analyzemarketdata.py  calculate_data_uniqueness.py  fund_feasibility.py  main.py  routes.py  trylogin.py
src/main/python/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/main/python/frontend/src/: App.jsx  api.js  index.css  main.jsx  theme.js
src/main/python/frontend/src/components/: AuthContext.jsx  ChatScreen.jsx  FindIdeas.jsx  FindInvestors.jsx  FounderDashboard.jsx  Home.jsx  Login.jsx  Navbar.jsx  Signup.jsx  TextGenComponent.jsx
src/main/python/frontend/src/components/founderDashboard/: BusinessPlan.jsx  CoFounderMatching.jsx  EntrepreneurRoadmap.jsx  FundFeasibility.jsx  IdeaValidation.jsx  LegalCompliance.jsx  PitchGenerator.jsx
src/main/python/models/: business_plan.py  model_loader.py  pitch_generator.py  text_generator.py
