[tool.poetry]
name = "skoders"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"
transformers = "4.48.3"
fastapi = "0.115.8"
uvicorn = "0.34.0"
diffusers = "0.32.2"
torch = "2.6.0"
gradio = "5.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
