[tool.poetry]
name = "skoders"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.8"
transformers = "4.48.3"
fastapi = "0.115.8"
uvicorn = "0.34.0"
diffusers = "0.32.2"
torch = "2.6.0"
gradio = "5.16.0"
accelerate = "^1.3.0"
googlesearch-python = "^1.3.0"
sentence-transformers = "^3.4.1"
praw = "^7.8.1"
xgboost = "^2.1.4"
spacy = "^3.8.4"
huggingface-hub = "^0.28.1"
pymongo = "4.11.1"
passlib = "1.7.4"
bcrypt = "4.2.1"
pyjwt = "2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
